--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.5.0",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
